--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "illuminate/support": "^5.2",
+        "illuminate/support": "5.*|6.*|7.*|8.*",
         "illuminate/database": "^5.2"
     },
     "extra": {
