--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.6",
         "illuminate/support": "5.*|6.*|7.*|8.*",
-        "illuminate/database": "^5.2"
+        "illuminate/database": "^6.20.14|7.*|8.*"
     },
     "extra": {
         "laravel": {
